--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body{
         height: 100px;
         width: 100px;
         margin: auto;
-        font-family: 'Architects Daughter', cursive;
+        font-family: 'Coming Soon', cursive;
         transition: ease 0.17s;
     }
         .field:hover{
